--- a/css/style.css
+++ b/css/style.css
@@ -586,6 +586,8 @@ a {
     font-weight: bold;
     text-align: center;
     margin-bottom: 24px;
+    width: 80%;
+
 }
 
 .happiness2 {
@@ -594,6 +596,8 @@ a {
     font-weight: bold;
     text-align: center;
     margin-bottom: 24px;
+    width: 80%;
+
 }
 
 .twitter {
